samples/_failures_safe/1761440969_17f95e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_abe26f09.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_abe26f09.c:143:20: error: missing terminating " character
  143 |             printf("\
      |                    ^~
./samples/SAFE/__tmp_abe26f09.c:143:13: error: expected expression at end of input
  143 |             printf("\
      |             ^~~~~~
./samples/SAFE/__tmp_abe26f09.c:143:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_abe26f09.c:143:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_abe26f09.c:143:13: error: expected declaration or statement at end of input
